syntax = "proto3";

package authorization;

import "google/protobuf/timestamp.proto";

service RoleService {
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc AssignPermissionToRole(AssignPermissionToRoleRequest) returns (AssignPermissionToRoleResponse);
  rpc RemovePermissionFromRole(RemovePermissionFromRoleRequest) returns (RemovePermissionFromRoleResponse);
  rpc GetRolePermissions(GetRolePermissionsRequest) returns (GetRolePermissionsResponse);
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Create Role
message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message CreateRoleResponse {
  string role_id = 1;
  bool success = 2;
  string message = 3;
}

// Get Role
message GetRoleRequest {
  string role_id = 1;
}

message GetRoleResponse {
  Role role = 1;
  bool success = 2;
  string message = 3;
}

// List Roles
message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total_count = 2;
  bool success = 3;
  string message = 4;
}

// Update Role
message UpdateRoleRequest {
  string role_id = 1;
  string name = 2;
  string description = 3;
}

message UpdateRoleResponse {
  bool success = 1;
  string message = 2;
}

// Delete Role
message DeleteRoleRequest {
  string role_id = 1;
}

message DeleteRoleResponse {
  bool success = 1;
  string message = 2;
}

// Assign Permission to Role
message AssignPermissionToRoleRequest {
  string role_id = 1;
  string permission_id = 2;
}

message AssignPermissionToRoleResponse {
  bool success = 1;
  string message = 2;
}

// Remove Permission from Role
message RemovePermissionFromRoleRequest {
  string role_id = 1;
  string permission_id = 2;
}

message RemovePermissionFromRoleResponse {
  bool success = 1;
  string message = 2;
}

// Get Role Permissions
message GetRolePermissionsRequest {
  string role_id = 1;
}

message GetRolePermissionsResponse {
  repeated string permission_ids = 1;
  bool success = 2;
  string message = 3;
}
